--- a/src/login/login.fxml
+++ b/src/login/login.fxml
@@ -12,24 +12,24 @@
 
 <AnchorPane fx:id="LoginPane" maxHeight="800.0" maxWidth="1280.0" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginController">
    <children>
-      <Label layoutX="456.0" layoutY="311.0" text="Username">
+      <Label layoutX="461.0" layoutY="314.0" text="Username">
          <font>
-            <Font name="System Bold" size="17.0" />
+            <Font name="System Bold" size="15.0" />
          </font></Label>
-      <Label layoutX="456.0" layoutY="388.0" prefHeight="24.0" prefWidth="128.0" text="Password">
+      <Label layoutX="463.0" layoutY="389.0" prefHeight="24.0" prefWidth="128.0" text="Password">
          <font>
-            <Font name="System Bold" size="17.0" />
+            <Font name="System Bold" size="15.0" />
          </font></Label>
-      <Label layoutX="475.0" layoutY="182.0" text="CHAT APPLICATION" textFill="RED">
+      <Label layoutX="496.0" layoutY="184.0" text="CHAT APPLICATION" textFill="#00a1ff">
          <font>
-            <Font name=".VnVogue Medium" size="35.0" />
+            <Font size="30.0" />
          </font>
       </Label>
       <Hyperlink fx:id="ForgetPassword" layoutX="640.0" layoutY="585.0" onAction="#loadConfirmEmail" text="Forget password ?" />
-      <JFXPasswordField fx:id="LoginPasswordField" layoutX="612.0" layoutY="385.0" prefHeight="31.0" prefWidth="187.0" />
-      <JFXTextField fx:id="LoginUsernameTextField" layoutX="611.0" layoutY="309.0" prefHeight="31.0" prefWidth="187.0" />
-      <JFXCheckBox fx:id="RememberMeCheckbox" layoutX="612.0" layoutY="474.0" text="Remember me" />
-      <JFXButton fx:id="LoginButton" layoutX="585.0" layoutY="523.0" onAction="#login" prefHeight="38.0" prefWidth="86.0" style="-fx-background-color: #afc1f7;" text="Login">
+      <JFXPasswordField fx:id="LoginPasswordField" layoutX="592.0" layoutY="385.0" prefHeight="31.0" prefWidth="207.0" />
+      <JFXTextField fx:id="LoginUsernameTextField" layoutX="591.0" layoutY="309.0" prefHeight="31.0" prefWidth="207.0" />
+      <JFXCheckBox fx:id="RememberMeCheckbox" layoutX="589.0" layoutY="473.0" text="Remember me" />
+      <JFXButton fx:id="LoginButton" layoutX="586.0" layoutY="523.0" onAction="#login" prefHeight="38.0" prefWidth="86.0" style="-fx-background-color: #66bbe2;" text="Login">
          <font>
             <Font name="System Bold" size="17.0" />
          </font>
