--- a/bin/confirmEmail/confirmEmail.fxml
+++ b/bin/confirmEmail/confirmEmail.fxml
@@ -25,5 +25,10 @@
             <Font size="14.0" />
          </font>
       </Label>
+      <JFXButton fx:id="BackButton" layoutX="50.0" layoutY="50.0" onAction="#clickBackButton" prefHeight="29.0" prefWidth="50.0" text="Back">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
