--- a/src/confirmEmail/confirmEmail.fxml
+++ b/src/confirmEmail/confirmEmail.fxml
@@ -18,7 +18,7 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="ConfirmEmailTextField" layoutX="534.0" layoutY="300.0" promptText="enter your email" />
+      <JFXTextField fx:id="ConfirmEmailTextField" layoutX="534.0" layoutY="300.0" prefHeight="25.0" prefWidth="169.0" promptText="enter your email" />
       <JFXButton fx:id="NextConfirmEmailButton" layoutX="592.0" layoutY="375.0" onAction="#clickNextButton" style="-fx-background-color: #66bbe2;" text="Next" />
       <Label fx:id="NoticeError" layoutX="502.0" layoutY="341.0" prefHeight="20.0" prefWidth="275.0" textAlignment="CENTER" textFill="RED">
          <font>
