--- a/bin/editProfile/editProfile.fxml
+++ b/bin/editProfile/editProfile.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
@@ -9,7 +10,7 @@
 
 <AnchorPane fx:id="MyEditProfilePane" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="editProfile.EditProfileController">
    <children>
-      <ImageView fx:id="MyProfileImage" fitHeight="300.0" fitWidth="300.0" layoutX="490.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="MyEditProfileImage" fitHeight="300.0" fitWidth="300.0" layoutX="490.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true" />
       <AnchorPane layoutX="413.0" layoutY="447.0" prefHeight="259.0" prefWidth="458.0">
          <children>
             <Label layoutX="37.0" layoutY="27.0" text="Username">
@@ -32,11 +33,11 @@
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="MyUserNameTextField" layoutX="184.0" layoutY="21.0" prefHeight="31.0" prefWidth="234.0" />
-            <JFXTextField fx:id="MyEmailTextField" layoutX="184.0" layoutY="72.0" prefHeight="31.0" prefWidth="234.0" />
-            <JFXTextField fx:id="MyPhoneNumberTextField" layoutX="184.0" layoutY="118.0" prefHeight="31.0" prefWidth="234.0" />
-            <JFXTextField fx:id="MyDOBTextField" layoutX="184.0" layoutY="166.0" prefHeight="31.0" prefWidth="234.0" />
+            <JFXTextField fx:id="EditUserNameTextField" layoutX="184.0" layoutY="21.0" prefHeight="31.0" prefWidth="234.0" />
+            <JFXTextField fx:id="EditEmailTextField" layoutX="184.0" layoutY="72.0" prefHeight="31.0" prefWidth="234.0" />
+            <JFXTextField fx:id="EditPhoneNumberTextField" layoutX="184.0" layoutY="118.0" prefHeight="31.0" prefWidth="234.0" />
             <JFXButton fx:id="SaveMyProfileButton" layoutX="201.0" layoutY="230.0" onAction="#clickSaveButton" prefHeight="31.0" prefWidth="56.0" style="-fx-background-color: #66bbe2;" text="Save" />
+            <JFXDatePicker layoutX="184.0" layoutY="167.0" prefHeight="31.0" prefWidth="234.0" />
          </children>
       </AnchorPane>
       <JFXButton fx:id="EditProfileImageButton" layoutX="740.0" layoutY="369.0" onAction="#editProfileImage" prefHeight="31.0" prefWidth="50.0" style="-fx-background-color: #66bbe2;" text="Edit" />
