--- a/src/login/login.fxml
+++ b/src/login/login.fxml
@@ -10,32 +10,45 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="LoginPane" maxHeight="800.0" maxWidth="1280.0" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginController">
+<AnchorPane fx:id="LoginPane" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginController">
    <children>
-      <Label layoutX="461.0" layoutY="314.0" text="Username">
+      <Label layoutX="751.0" layoutY="374.0" text="Username">
          <font>
-            <Font name="System Bold" size="15.0" />
+            <Font size="16.0" />
          </font></Label>
-      <Label layoutX="463.0" layoutY="389.0" prefHeight="24.0" prefWidth="128.0" text="Password">
+      <Label layoutX="751.0" layoutY="495.0" prefHeight="24.0" prefWidth="128.0" text="Password">
          <font>
-            <Font name="System Bold" size="15.0" />
+            <Font size="16.0" />
          </font></Label>
-      <Label layoutX="496.0" layoutY="184.0" text="CHAT APPLICATION" textFill="#00a1ff">
+      <Label layoutX="823.0" layoutY="202.0" text="CHAT APPLICATION" textFill="#00a1ff">
          <font>
-            <Font size="30.0" />
+            <Font size="33.0" />
          </font>
       </Label>
-      <Hyperlink fx:id="ForgetPassword" layoutX="640.0" layoutY="585.0" onAction="#loadConfirmEmail" text="Forget password ?" />
-      <JFXTextField fx:id="LoginUsernameTextField" layoutX="591.0" layoutY="309.0" prefHeight="31.0" prefWidth="207.0" />
-      <JFXPasswordField fx:id="LoginPasswordField" layoutX="592.0" layoutY="385.0" prefHeight="31.0" prefWidth="207.0" />
-      <JFXCheckBox fx:id="RememberMeCheckbox" layoutX="589.0" layoutY="473.0" text="Remember me" />
-      <JFXButton fx:id="LoginButton" layoutX="586.0" layoutY="523.0" onAction="#login" prefHeight="38.0" prefWidth="86.0" style="-fx-background-color: #66bbe2;" text="Login">
+      <Hyperlink fx:id="ForgetPassword" layoutX="1009.0" layoutY="739.0" onAction="#loadConfirmEmail" text="Forget password ?">
+         <font>
+            <Font size="13.0" />
+         </font></Hyperlink>
+      <JFXTextField fx:id="LoginUsernameTextField" layoutX="945.0" layoutY="371.0" prefHeight="31.0" prefWidth="243.0" />
+      <JFXPasswordField fx:id="LoginPasswordField" layoutX="945.0" layoutY="492.0" prefHeight="31.0" prefWidth="243.0" />
+      <JFXCheckBox fx:id="RememberMeCheckbox" layoutX="945.0" layoutY="608.0" text="Remember me">
+         <font>
+            <Font size="13.0" />
+         </font></JFXCheckBox>
+      <JFXButton fx:id="LoginButton" layoutX="917.0" layoutY="658.0" onAction="#login" prefHeight="38.0" prefWidth="86.0" style="-fx-background-color: #66bbe2;" text="Login">
          <font>
             <Font name="System Bold" size="17.0" />
          </font>
       </JFXButton>
-      <Label fx:id="NoticeLabel" layoutX="454.0" layoutY="436.0" prefHeight="29.0" prefWidth="472.0" textFill="RED" />
-      <Hyperlink fx:id="SignUp" layoutX="506.0" layoutY="585.0" onAction="#signUp" text="Sign up" />
+      <Label fx:id="NoticeLabel" layoutX="751.0" layoutY="556.0" prefHeight="29.0" prefWidth="472.0" textFill="RED">
+         <font>
+            <Font size="13.0" />
+         </font></Label>
+      <Hyperlink fx:id="SignUp" layoutX="815.0" layoutY="739.0" onAction="#signUp" text="Sign up">
+         <font>
+            <Font size="13.0" />
+         </font></Hyperlink>
+      <JFXButton fx:id="ExitButton" layoutX="1832.0" layoutY="26.0" onAction="#Exit" opacity="0.29" prefHeight="58.0" prefWidth="62.0" />
    </children>
    <opaqueInsets>
       <Insets />
