--- a/src/confirm/confirm.fxml
+++ b/src/confirm/confirm.fxml
@@ -6,20 +6,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ConfirmCodePane" maxHeight="800.0" maxWidth="1280.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="confirm.ConfirmController">
+<AnchorPane fx:id="ConfirmCodePane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="confirm.ConfirmController">
    <children>
-      <Label layoutX="542.0" layoutY="208.0" prefHeight="32.0" prefWidth="140.0" text="Confirm Code" textFill="#00a1ff">
+      <Label layoutX="890.0" layoutY="205.0" prefHeight="32.0" prefWidth="140.0" text="Confirm Code" textFill="#00a1ff">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <Label layoutX="455.0" layoutY="272.0" prefHeight="20.0" prefWidth="314.0" text="Please enter the code we have sent at your email :">
+      <Label layoutX="782.0" layoutY="285.0" prefHeight="25.0" prefWidth="356.0" text="Please enter the code we have sent at your email :">
          <font>
-            <Font size="14.0" />
+            <Font size="16.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="ConfirmCodeField" layoutX="528.0" layoutY="323.0" promptText="enter confirm code" />
-      <JFXButton fx:id="ConfirmCodeButton" layoutX="577.0" layoutY="394.0" onAction="#clickConfirmCodeButton" style="-fx-background-color: #66bbe2;" text="Confirm">
+      <JFXTextField fx:id="ConfirmCodeField" layoutX="862.0" layoutY="372.0" prefHeight="25.0" prefWidth="196.0" promptText="enter confirm code">
+         <font>
+            <Font size="14.0" />
+         </font></JFXTextField>
+      <JFXButton fx:id="ConfirmCodeButton" layoutX="922.0" layoutY="458.0" onAction="#clickConfirmCodeButton" prefHeight="32.0" prefWidth="76.0" style="-fx-background-color: #66bbe2;" text="Confirm">
          <font>
             <Font size="14.0" />
          </font>
@@ -29,10 +32,11 @@
             <Font size="13.0" />
          </font>
       </Label>
-      <JFXButton fx:id="BackButton" layoutX="50.0" layoutY="50.0" onAction="#clickBackButton" prefHeight="29.0" prefWidth="50.0" text="Back">
+      <JFXButton fx:id="BackButton" layoutX="47.0" layoutY="49.0" onAction="#clickBackButton" prefHeight="50.0" prefWidth="50.0" text="Back">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font size="13.0" />
          </font>
       </JFXButton>
+      <JFXButton fx:id="ExitButton" layoutX="1830.0" layoutY="37.0" onAction="#Exit" opacity="0.4" prefHeight="50.0" prefWidth="50.0" text="Exit" />
    </children>
 </AnchorPane>
