--- a/src/confirmEmail/confirmEmail.fxml
+++ b/src/confirmEmail/confirmEmail.fxml
@@ -6,29 +6,33 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ConfirmEmailPane" maxHeight="800.0" maxWidth="1280.0" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="confirmEmail.ConfirmEmailController">
+<AnchorPane fx:id="ConfirmEmailPane" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="confirmEmail.ConfirmEmailController">
    <children>
-      <Label layoutX="533.0" layoutY="189.0" text="Confirm your email" textFill="#009ff5">
+      <Label layoutX="839.0" layoutY="164.0" text="Confirm your email" textFill="#009ff5">
          <font>
-            <Font size="20.0" />
+            <Font size="25.0" />
          </font>
       </Label>
-      <Label layoutX="382.0" layoutY="243.0" text="Enter your email address and we will send a confirmation code to your email">
+      <Label layoutX="676.0" layoutY="250.0" text="Enter your email address and we will send a confirmation code to your email">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <JFXTextField fx:id="ConfirmEmailTextField" layoutX="839.0" layoutY="326.0" prefHeight="25.0" prefWidth="212.0" promptText="enter your email">
          <font>
             <Font size="14.0" />
-         </font>
-      </Label>
-      <JFXTextField fx:id="ConfirmEmailTextField" layoutX="534.0" layoutY="300.0" prefHeight="25.0" prefWidth="169.0" promptText="enter your email" />
-      <JFXButton fx:id="NextConfirmEmailButton" layoutX="592.0" layoutY="375.0" onAction="#clickNextButton" style="-fx-background-color: #66bbe2;" text="Next" />
+         </font></JFXTextField>
+      <JFXButton fx:id="NextConfirmEmailButton" layoutX="915.0" layoutY="409.0" onAction="#clickNextButton" prefHeight="29.0" prefWidth="60.0" style="-fx-background-color: #66bbe2;" text="Next" />
       <Label fx:id="NoticeError" layoutX="502.0" layoutY="341.0" prefHeight="20.0" prefWidth="275.0" textAlignment="CENTER" textFill="RED">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <JFXButton fx:id="BackButton" layoutX="50.0" layoutY="50.0" onAction="#clickBackButton" prefHeight="29.0" prefWidth="50.0" text="Back">
+      <JFXButton fx:id="BackButton" layoutX="48.0" layoutY="51.0" onAction="#clickBackButton" prefHeight="50.0" prefWidth="50.0" text="Back">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font size="13.0" />
          </font>
       </JFXButton>
+      <JFXButton fx:id="ExitButton" layoutX="1839.0" layoutY="25.0" onAction="#Exit" opacity="0.4" prefHeight="50.0" prefWidth="50.0" text="Exit" />
    </children>
 </AnchorPane>
