--- a/src/myProfile/myProfile.fxml
+++ b/src/myProfile/myProfile.fxml
@@ -6,42 +6,43 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ProfileInfoPane" maxHeight="800.0" maxWidth="1280.0" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="myProfile.MyProfileController">
+<AnchorPane fx:id="ProfileInfoPane" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="myProfile.MyProfileController">
     <children>
-        <ImageView fx:id="MyImageView" fitHeight="300.0" fitWidth="300.0" layoutX="490.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true" />
-        <AnchorPane layoutX="413.0" layoutY="447.0" prefHeight="259.0" prefWidth="458.0">
+        <ImageView fx:id="MyImageView" fitHeight="300.0" fitWidth="300.0" layoutX="811.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true" />
+        <AnchorPane layoutX="707.0" layoutY="475.0" prefHeight="300.0" prefWidth="507.0">
             <children>
                 <Label layoutX="37.0" layoutY="27.0" text="Username">
                     <font>
-                        <Font name="System Bold" size="14.0" />
+                        <Font size="15.0" />
                     </font>
                 </Label>
                 <Label layoutX="37.0" layoutY="172.0" text="Date of birth">
                     <font>
-                        <Font name="System Bold" size="14.0" />
+                        <Font size="15.0" />
                     </font>
                 </Label>
                 <Label layoutX="37.0" layoutY="78.0" text="Email">
                     <font>
-                        <Font name="System Bold" size="14.0" />
+                        <Font size="15.0" />
                     </font>
                 </Label>
                 <Label layoutX="37.0" layoutY="124.0" text="Phone number">
                     <font>
-                        <Font name="System Bold" size="14.0" />
+                        <Font size="15.0" />
                     </font>
                 </Label>
-                <JFXButton fx:id="ToEditProfileButton" layoutX="180.0" layoutY="234.0" onAction="#toEditProfile" prefHeight="31.0" prefWidth="98.0" style="-fx-background-color: #66bbe2;" text="Edit profile" />
-            <Label fx:id="UsernameLabel" layoutX="201.0" layoutY="27.0" prefHeight="21.0" prefWidth="243.0" />
-            <Label fx:id="EmailLabel" layoutX="201.0" layoutY="78.0" prefHeight="21.0" prefWidth="243.0" />
-            <Label fx:id="PhoneNumberLabel" layoutX="201.0" layoutY="124.0" prefHeight="21.0" prefWidth="243.0" />
-            <Label fx:id="DOBLabel" layoutX="201.0" layoutY="172.0" prefHeight="21.0" prefWidth="243.0" />
+                <JFXButton fx:id="ToEditProfileButton" layoutX="205.0" layoutY="237.0" onAction="#toEditProfile" prefHeight="31.0" prefWidth="98.0" style="-fx-background-color: #66bbe2;" text="Edit profile" />
+            <Label fx:id="UsernameLabel" layoutX="201.0" layoutY="27.0" prefHeight="21.0" prefWidth="259.0" />
+            <Label fx:id="EmailLabel" layoutX="201.0" layoutY="78.0" prefHeight="21.0" prefWidth="259.0" />
+            <Label fx:id="PhoneNumberLabel" layoutX="201.0" layoutY="124.0" prefHeight="21.0" prefWidth="259.0" />
+            <Label fx:id="DOBLabel" layoutX="201.0" layoutY="172.0" prefHeight="21.0" prefWidth="259.0" />
             </children>
         </AnchorPane>
-        <JFXButton fx:id="BackButton" layoutX="50.0" layoutY="50.0" onAction="#clickBackButton" prefHeight="29.0" prefWidth="50.0" text="Back">
+        <JFXButton fx:id="BackButton" layoutX="50.0" layoutY="50.0" onAction="#clickBackButton" prefHeight="50.0" prefWidth="50.0" text="Back">
             <font>
-                <Font name="System Bold" size="13.0" />
+                <Font size="13.0" />
             </font>
         </JFXButton>
+      <JFXButton fx:id="ExitButton" layoutX="1836.0" layoutY="35.0" onAction="#Exit" prefHeight="50.0" prefWidth="50.0" text="Exit" />
     </children>
 </AnchorPane>
