--- a/src/myProfile/myProfile.fxml
+++ b/src/myProfile/myProfile.fxml
@@ -31,18 +31,41 @@
                         <Font size="15.0" />
                     </font>
                 </Label>
-                <JFXButton fx:id="ToEditProfileButton" layoutX="205.0" layoutY="237.0" onAction="#toEditProfile" prefHeight="31.0" prefWidth="98.0" style="-fx-background-color: #66bbe2;" text="Edit profile" />
-            <Label fx:id="UsernameLabel" layoutX="201.0" layoutY="27.0" prefHeight="21.0" prefWidth="259.0" />
-            <Label fx:id="EmailLabel" layoutX="201.0" layoutY="78.0" prefHeight="21.0" prefWidth="259.0" />
-            <Label fx:id="PhoneNumberLabel" layoutX="201.0" layoutY="124.0" prefHeight="21.0" prefWidth="259.0" />
-            <Label fx:id="DOBLabel" layoutX="201.0" layoutY="172.0" prefHeight="21.0" prefWidth="259.0" />
+                <JFXButton fx:id="ToEditProfileButton" layoutX="205.0" layoutY="287.0" onAction="#toEditProfile" prefHeight="31.0" prefWidth="98.0" style="-fx-background-color: #66bbe2;" text="Edit profile" />
+            <Label fx:id="UsernameLabel" layoutX="201.0" layoutY="22.0" prefHeight="31.0" prefWidth="259.0">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label fx:id="EmailLabel" layoutX="201.0" layoutY="73.0" prefHeight="31.0" prefWidth="259.0">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label fx:id="PhoneNumberLabel" layoutX="201.0" layoutY="119.0" prefHeight="31.0" prefWidth="259.0">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label fx:id="DOBLabel" layoutX="201.0" layoutY="167.0" prefHeight="31.0" prefWidth="259.0">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label layoutX="37.0" layoutY="225.0" text="Password">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="205.0" layoutY="225.0" prefHeight="21.0" prefWidth="67.0" text="**********">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <JFXButton fx:id="ChangePasswordButton" layoutX="303.0" layoutY="223.0" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #ffac3f;" text="Change" />
             </children>
         </AnchorPane>
-        <JFXButton fx:id="BackButton" layoutX="50.0" layoutY="50.0" onAction="#clickBackButton" prefHeight="50.0" prefWidth="50.0" text="Back">
+        <JFXButton fx:id="BackButton" layoutX="50.0" layoutY="50.0" onAction="#clickBackButton" prefHeight="50.0" prefWidth="50.0" text=".">
             <font>
                 <Font size="13.0" />
             </font>
         </JFXButton>
-      <JFXButton fx:id="ExitButton" layoutX="1836.0" layoutY="35.0" onAction="#Exit" prefHeight="50.0" prefWidth="50.0" text="Exit" />
+      <JFXButton fx:id="ExitButton" layoutX="1836.0" layoutY="35.0" onAction="#Exit" prefHeight="50.0" prefWidth="50.0" text="." />
     </children>
 </AnchorPane>
