--- a/bin/confirm/confirm.fxml
+++ b/bin/confirm/confirm.fxml
@@ -18,25 +18,25 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="ConfirmCodeField" layoutX="862.0" layoutY="372.0" prefHeight="25.0" prefWidth="196.0" promptText="enter confirm code">
+      <JFXTextField fx:id="ConfirmCodeField" layoutX="862.0" layoutY="356.0" prefHeight="25.0" prefWidth="196.0" promptText="enter confirm code">
          <font>
             <Font size="14.0" />
          </font></JFXTextField>
-      <JFXButton fx:id="ConfirmCodeButton" layoutX="922.0" layoutY="458.0" onAction="#clickConfirmCodeButton" prefHeight="32.0" prefWidth="76.0" style="-fx-background-color: #66bbe2;" text="Confirm">
+      <JFXButton fx:id="ConfirmCodeButton" layoutX="922.0" layoutY="473.0" onAction="#clickConfirmCodeButton" prefHeight="32.0" prefWidth="76.0" style="-fx-background-color: #66bbe2;" text="Confirm">
          <font>
             <Font size="14.0" />
          </font>
       </JFXButton>
-      <Label fx:id="NoticeCodeError" layoutX="509.0" layoutY="365.0" prefHeight="17.0" prefWidth="238.0" textFill="RED">
+      <Label fx:id="NoticeCodeError" layoutX="782.0" layoutY="426.0" prefHeight="19.0" prefWidth="418.0" textFill="RED">
          <font>
             <Font size="13.0" />
          </font>
       </Label>
-      <JFXButton fx:id="BackButton" layoutX="47.0" layoutY="49.0" onAction="#clickBackButton" prefHeight="50.0" prefWidth="50.0" text="Back">
+      <JFXButton fx:id="BackButton" layoutX="47.0" layoutY="49.0" onAction="#clickBackButton" prefHeight="50.0" prefWidth="50.0" text=".">
          <font>
             <Font size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="ExitButton" layoutX="1830.0" layoutY="37.0" onAction="#Exit" opacity="0.4" prefHeight="50.0" prefWidth="50.0" text="Exit" />
+      <JFXButton fx:id="ExitButton" layoutX="1830.0" layoutY="37.0" onAction="#Exit" opacity="0.4" prefHeight="50.0" prefWidth="50.0" text="." />
    </children>
 </AnchorPane>
