--- a/src/confirm/confirm.fxml
+++ b/src/confirm/confirm.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,7 +9,7 @@
 
 <AnchorPane fx:id="ConfirmCodePane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="confirm.ConfirmController">
    <children>
-      <Label layoutX="890.0" layoutY="205.0" prefHeight="32.0" prefWidth="140.0" text="Confirm Code" textFill="#00a1ff">
+      <Label layoutX="868.0" layoutY="206.0" prefHeight="32.0" prefWidth="186.0" text="Get New Password" textFill="#00a1ff">
          <font>
             <Font size="22.0" />
          </font>
@@ -18,25 +19,60 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="ConfirmCodeField" layoutX="862.0" layoutY="372.0" prefHeight="25.0" prefWidth="196.0" promptText="enter confirm code">
+      <JFXTextField fx:id="ConfirmCodeField" layoutX="863.0" layoutY="335.0" prefHeight="25.0" prefWidth="196.0" promptText="enter confirm code">
          <font>
             <Font size="14.0" />
          </font></JFXTextField>
-      <JFXButton fx:id="ConfirmCodeButton" layoutX="922.0" layoutY="458.0" onAction="#clickConfirmCodeButton" prefHeight="32.0" prefWidth="76.0" style="-fx-background-color: #66bbe2;" text="Confirm">
+      <JFXButton fx:id="ConfirmCodeButton" layoutX="923.0" layoutY="737.0" onAction="#clickConfirmCodeButton" prefHeight="32.0" prefWidth="76.0" style="-fx-background-color: #66bbe2;" text="Confirm">
          <font>
             <Font size="14.0" />
          </font>
       </JFXButton>
-      <Label fx:id="NoticeCodeError" layoutX="509.0" layoutY="365.0" prefHeight="17.0" prefWidth="238.0" textFill="RED">
+      <Label fx:id="NoticeCodeError" layoutX="751.0" layoutY="703.0" prefHeight="19.0" prefWidth="418.0" textFill="RED">
          <font>
             <Font size="13.0" />
          </font>
       </Label>
-      <JFXButton fx:id="BackButton" layoutX="47.0" layoutY="49.0" onAction="#clickBackButton" prefHeight="50.0" prefWidth="50.0" text="Back">
+      <JFXButton fx:id="BackButton" layoutX="47.0" layoutY="49.0" onAction="#clickBackButton" prefHeight="50.0" prefWidth="50.0" text=".">
          <font>
             <Font size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="ExitButton" layoutX="1830.0" layoutY="37.0" onAction="#Exit" opacity="0.4" prefHeight="50.0" prefWidth="50.0" text="Exit" />
+      <JFXButton fx:id="ExitButton" layoutX="1830.0" layoutY="37.0" onAction="#Exit" opacity="0.4" prefHeight="50.0" prefWidth="50.0" text="." />
+      <Label layoutX="885.0" layoutY="427.0" prefHeight="25.0" prefWidth="151.0" text="Enter new password:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <JFXPasswordField layoutX="862.0" layoutY="471.0" prefHeight="25.0" prefWidth="196.0" promptText="enter password">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </JFXPasswordField>
+      <Label fx:id="PasswordError" layoutX="752.0" layoutY="511.0" prefHeight="44.0" prefWidth="418.0" textFill="RED">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="874.0" layoutY="564.0" prefHeight="25.0" prefWidth="174.0" text="Confirm your password:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <JFXPasswordField layoutX="863.0" layoutY="610.0" prefHeight="25.0" prefWidth="196.0" promptText="re-enter your password">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </JFXPasswordField>
+      <Label fx:id="ConfirmPasswordError" layoutX="751.0" layoutY="659.0" prefHeight="19.0" prefWidth="418.0" textFill="RED">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Label fx:id="ConfirmCodeError" layoutX="751.0" layoutY="385.0" prefHeight="19.0" prefWidth="418.0" textFill="RED">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
