--- a/bin/myProfile/myProfile.fxml
+++ b/bin/myProfile/myProfile.fxml
@@ -61,11 +61,11 @@
             <JFXButton fx:id="ChangePasswordButton" layoutX="303.0" layoutY="223.0" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #ffac3f;" text="Change" />
             </children>
         </AnchorPane>
-        <JFXButton fx:id="BackButton" layoutX="50.0" layoutY="50.0" onAction="#clickBackButton" prefHeight="50.0" prefWidth="50.0" text="Back">
+        <JFXButton fx:id="BackButton" layoutX="50.0" layoutY="50.0" onAction="#clickBackButton" prefHeight="50.0" prefWidth="50.0" text=".">
             <font>
                 <Font size="13.0" />
             </font>
         </JFXButton>
-      <JFXButton fx:id="ExitButton" layoutX="1836.0" layoutY="35.0" onAction="#Exit" prefHeight="50.0" prefWidth="50.0" text="Exit" />
+      <JFXButton fx:id="ExitButton" layoutX="1836.0" layoutY="35.0" onAction="#Exit" prefHeight="50.0" prefWidth="50.0" text="." />
     </children>
 </AnchorPane>
