--- a/src/confirmEmail/confirmEmail.fxml
+++ b/src/confirmEmail/confirmEmail.fxml
@@ -33,6 +33,6 @@
             <Font size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="ExitButton" layoutX="1839.0" layoutY="25.0" onAction="#Exit" opacity="0.4" prefHeight="50.0" prefWidth="50.0" text="." />
+      <JFXButton fx:id="ExitButton" layoutX="1839.0" layoutY="25.0" onAction="#Exit" prefHeight="50.0" prefWidth="50.0" text="." />
    </children>
 </AnchorPane>
